Small spacing issues

--- a/src/css/about-variable-fonts.css
+++ b/src/css/about-variable-fonts.css
@@ -20,16 +20,13 @@
 	margin-bottom: 2.5rem;
 }
 
-.about-variable-fonts-section .interactive-controls-list {
-	margin-bottom: 5rem;
-}
-
 .about-variable-fonts-section .interactive-controls-list-item {
-	margin-bottom: 3.5rem;
+	margin-top: 6rem;
 }
 
 .code-container {
 	background-color: var(--arapey-gray);
+	margin-top: 6rem;
 	padding: 1.5rem;
 }
 
@@ -53,7 +50,7 @@ code .string-value {
 
 .character-container {
 	position: relative;
-	height: 500px;
+	line-height: 1;
 }
 
 .character-container .character {
